[package]
name = "openvr"
version = "0.6.0"
edition = "2021"
authors = [
    "Colin Sherratt",
    "Erick Tryzelaar",
    "Rene Eichhorn",
    "Benjamin Saunders"
]
license = "MIT"

homepage = "https://github.com/rust-openvr/rust-openvr"
repository = "https://github.com/rust-openvr/rust-openvr"

description = "A high-level binding for OpenVR."

keywords = ["vr", "vive", "steamvr"]
categories = [ "hardware-support", "api-bindings" ]

[badges]
travis-ci = { repository = "rust-openvr/rust-openvr" }
maintenance = { status = "passively-maintained" }

[dependencies]
openvr_sys = { git = "https://github.com/SpiralP/rust-openvr-sys.git" }
lazy_static = "1"
